# Raven-Rewrite

./: .deepsource.toml  .gitignore  .gitmodules  ARCHITECTURE.md  BUILD_LINUX.md  CLAUDE.md  CLAUDE.md.backup  Cargo.toml  FINAL_SESSION_SUMMARY.md  ISSUES.md  PLAN.md  README.md  TEST_STATUS.md  download-llvm.sh  final_test_run.txt  full_test_output.txt  rustc-ice-2025-11-19T21_52_32-3083.txt  rustc-ice-2026-02-25T23_22_19-8655.txt  test_complete.txt  test_final.txt  test_llvm_direct.rs  test_methods_check.txt  test_run2.txt  test_traits_debug.rs  test_with_int_params.txt
.cargo/: .gitignore  config.toml
.cursor/rules/: project-rules.mdc
.github/workflows/: build-test.yml  ci.yml  format.yml  release.yml  test-status.yml
crates/analysis/rv-borrow-check/: Cargo.toml
crates/analysis/rv-borrow-check/src/: checker.rs  lib.rs  loans.rs
crates/analysis/rv-lifetime/: Cargo.toml
crates/analysis/rv-lifetime/src/: context.rs  error.rs  infer.rs  lifetime.rs
crates/analysis/rv-macro/: Cargo.toml
crates/analysis/rv-macro/src/: builtins.rs  lib.rs
crates/analysis/rv-resolve/: Cargo.toml
crates/analysis/rv-resolve/src/: error.rs  lib.rs  resolver.rs
crates/analyzer/rv-duplicates/: Cargo.toml
crates/analyzer/rv-duplicates/src/: lib.rs
crates/analyzer/rv-lint/: Cargo.toml
crates/analyzer/rv-lint/src/: lib.rs
crates/analyzer/rv-metrics/: Cargo.toml
crates/analyzer/rv-metrics/src/: lib.rs
crates/cli/magpie/: Cargo.toml  README.md
crates/cli/magpie/src/: backend.rs  lib.rs  main.rs  manifest.rs
crates/cli/magpie/src/backends/: cranelift_backend.rs  llvm.rs  mod.rs  raven.rs
crates/cli/raven/: Cargo.toml
crates/cli/raven-analyzer/: Cargo.toml
crates/cli/raven-analyzer/src/: compiler.rs  duplicates.rs  lint.rs  main.rs  metrics.rs
crates/cli/raven/src/: build.rs  check.rs  compiler.rs  main.rs  new.rs  run.rs
crates/codegen/rv-cranelift/: Cargo.toml
crates/codegen/rv-cranelift/src/: lib.rs
crates/codegen/rv-interpreter/: Cargo.toml
crates/codegen/rv-interpreter/src/: interpreter.rs  lib.rs  value.rs
crates/codegen/rv-llvm-backend/: Cargo.toml  README.md  build.rs
crates/codegen/rv-llvm-backend/src/: codegen.rs  lib.rs  target_init.c  types.rs
crates/codegen/rv-llvm-backend/tests/: backend_tests.rs
crates/codegen/rv-llvm-backend/wrappers/: target.c
crates/driver/rv-driver/: Cargo.toml
crates/driver/rv-driver/src/: lib.rs  project.rs
crates/foundation/rv-core/: Cargo.toml
crates/foundation/rv-database/: Cargo.toml
crates/foundation/rv-database/src/: lib.rs
crates/ir/rv-hir/: Cargo.toml
crates/ir/rv-hir/src/: exhaustiveness.rs  lib.rs
crates/ir/rv-lir/: Cargo.toml
crates/ir/rv-lir/src/: lib.rs  lower.rs
crates/ir/rv-mir/: Cargo.toml
crates/ir/rv-mir/src/: lib.rs  lower.rs
crates/language-support/lang-raven/: Cargo.toml
crates/language-support/lang-raven/src/: lib.rs
crates/lowering/rv-hir-lower/: Cargo.toml
crates/lowering/rv-hir-lower/src/: core_library.rs  lib.rs  lower.rs  scope.rs  symbol.rs
crates/lowering/rv-hir-lower/tests/: test_core_parse.rs
crates/lowering/rv-mir-lower/: Cargo.toml
crates/lowering/rv-mir-lower/src/: lib.rs
crates/parser/rv-parser/: Cargo.toml
crates/parser/rv-parser/src/: error.rs  lib.rs
crates/passes/rv-const-eval/: Cargo.toml
crates/passes/rv-const-eval/src/: evaluator.rs  lib.rs  value.rs
crates/rv-arena/: Cargo.toml
crates/rv-borrow/: Cargo.toml
crates/rv-borrowck/: Cargo.toml
crates/rv-codegen/: Cargo.toml
crates/rv-core/: Cargo.toml
crates/rv-coverage/: Cargo.toml
crates/rv-db/: Cargo.toml
crates/rv-db/src/: lib.rs  tests.rs
crates/rv-db/src/fixtures/: tests_recip_bad.rv  tests_recip_ok.rv  tests_src1.rv
crates/rv-driver/: Cargo.toml  prelude.rv
crates/rv-driver/src/: erased_vm.rs  lib.rs  unify.rs
crates/rv-driver/tests/: pipeline.rs  recheck_harness.rs  rv_proofs.rs  unified_parser.rs  unified_scan.rs
crates/rv-infer/: Cargo.toml
crates/rv-ir/: Cargo.toml
crates/rv-kernel/: Cargo.toml
crates/rv-kernel-core/: Cargo.toml
crates/rv-logic/: Cargo.toml
crates/rv-lower/: Cargo.toml
crates/rv-rustfe/: Cargo.toml
crates/rv-rustfe/src/: lib.rs
crates/rv-rustfe/src/ra/: build.rs  lower.rs  mod.rs  spec.rs  types.rs
crates/rv-solve/: Cargo.toml
crates/rv-syntax/: Cargo.toml
crates/rv-vm/: Cargo.toml
crates/rv-vm/src/: lib.rs
crates/rvc/: Cargo.toml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  STD_INTEGRATION_ANALYSIS.md  cubical.md  raven-language.md  trust-architecture.md
examples/: div.rv  fixed_width_ints.rv  generic_bounds.rv  generic_trait.rv  i128_literals.rv  loop_invariant.rv  mixed.rv  mut_ref_spec.rv  option.rv  panic.rv  point.rv  real.rs  recip.rv  refined_alias.rv  refs.rv  shared_type.rv  try_op.rv  unsafe_div.rv
examples/proofs/: README.md  alg_sorting.rv  append_assoc.rv  arith_assoc.rv  bigstep_smallstep.rv  binary_nat.rv  bool_logic.rv  bst.rv  bst_ordered.rv  capstone.rv  cek_machine.rv  cek_safety.rv  coinductive.rv  compile_stack.rv  compiler_correctness.rv  convoy_hyp_direct.rv  cubical.rv  cubical_showcase.rv  decide_demo.rv  dependent_match.rv  elab_demo.rv  fn_composition_demo.rv  generic_list.rv  graded_demo.rv  graded_demo_linear_violation.rv  heap.rv  indexed_relation.rv  le.rv  le_trans.rv  list.rv  list_laws.rv  list_map.rv  machine.rv  mul.rv  mutual_trees.rv  nat_arithmetic.rv  nat_induction.rv  objlang.rv  opt_compile_pipeline.rv  opt_constfold.rv  (+28 more)
language/compilers/: README.md
language/hir/: Cargo.toml  README.md
language/mir/: Cargo.toml  README.md
language/parser/: Cargo.toml  README.md
language/parser/src/: code.rs  dependency.rs  errors.rs  expressions.rs  file.rs  function.rs  lib.rs  statements.rs  structure.rs  util.rs
language/runner/: Cargo.toml  README.md
language/syntax/: Cargo.toml  README.md
language/type_system/: Cargo.toml  README.md
scripts/: README.md  coverage.sh  generate_status_report.py  parse_test_results.py  setup-llvm.sh  update_docs.py  verify.sh  verify_infrastructure.sh
tests/: Cargo.toml
tests/core/: other.rv  parsing.rv
tests/src/: main.rs
(+467 files in other folders)
