[workspace]
resolver = "2"
members = [
    "crates/foundation/*",
    "crates/parser/*",
    "crates/analysis/*",
    "crates/codegen/*",
    "crates/language-support/*",
    "crates/analyzer/*",
    "crates/cli/*",
    "crates/testing/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Raven Contributors"]
repository = "https://github.com/yourusername/raven"

[workspace.dependencies]
# Incremental compilation
salsa = "0.16"

# Parsing
tree-sitter = "0.22"
tree-sitter-rust = "0.21"

# Code generation
cranelift = "0.109"
cranelift-jit = "0.109"
cranelift-module = "0.109"
inkwell = { version = "0.4", features = ["llvm18-0"] }

# Error reporting
miette = { version = "7.0", features = ["fancy"] }
codespan-reporting = "0.11"

# Utilities
lasso = { version = "0.7", features = ["multi-threaded"] }
indexmap = "2.0"
rustc-hash = "2.0"

# Async/IO
tokio = { version = "1.35", features = ["fs", "rt-multi-thread", "macros"] }

# Serialization (for caching)
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Testing
expect-test = "1.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Common types
derive_more = "0.99"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
