[package]
name = "rv-driver"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
# The Raven executable pipeline runs as a salsa query graph in rv-db; the driver
# delegates to it and keeps rv-vm for the public `Value` re-export.
rv-db.workspace = true
rv-vm.workspace = true
# The dependent-type-theory kernel + its Raven surface (the verified-Raven path).
rv-kernel.workspace = true
