[package]
name = "rv-rustfe"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
rv-core.workspace = true
rv-ir.workspace = true
# rust-analyzer's parser (vendored, owned, edition-aware, error-tolerant); the
# front-end lowers from its typed AST.
ra_ap_syntax = "0.0.337"
