[package]
name = "parser"
edition = "2024"

[dependencies]
# Handling async tasks
tokio.workspace = true
lasso.workspace = true
async-recursion.workspace = true

# Parsing
# Using an earlier nom version for nom-supreme, will update when it does
nom = "7.1.3"
nom_locate = "4.2.0"

# Util
indexmap.workspace = true
anyhow.workspace = true
owo-colors.workspace = true
toml = "0.8"

# Core
syntax.workspace = true
hir.workspace = true