[package]
name = "rv-lifetime"
version.workspace = true
edition.workspace = true

[dependencies]
rv-span.workspace = true
rv-intern.workspace = true
rv-hir.workspace = true
rv-ty.workspace = true
rv-mir.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true

[lints]
workspace = true
