[package]
name = "rv-resolve"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rv-arena.workspace = true
rv-hir.workspace = true
rv-intern.workspace = true
rv-span.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true

[lints]
workspace = true
