[package]
name = "rv-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rv-hir = { path = "../../analysis/rv-hir" }
rv-syntax = { path = "../../foundation/rv-syntax" }
rv-span = { path = "../../foundation/rv-span" }
serde = { workspace = true }

[lints]
workspace = true
