[package]
name = "magpie"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "magpie"
path = "src/main.rs"

[[bin]]
name = "magpie"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
toml.workspace = true
serde = { workspace = true, features = ["derive"] }
indexmap = { workspace = true, features = ["serde"] }

# Internal dependencies
rv-vfs = { path = "../../foundation/rv-vfs" }
rv-database = { path = "../../foundation/rv-database" }
rv-parser = { path = "../../parser/rv-parser" }
rv-hir-lower = { path = "../../analysis/rv-hir-lower" }
rv-ty = { path = "../../analysis/rv-ty" }
rv-mir = { path = "../../analysis/rv-mir" }
rv-interpreter = { path = "../../codegen/rv-interpreter" }
rv-cranelift = { path = "../../codegen/rv-cranelift" }
rv-llvm-backend = { path = "../../codegen/rv-llvm-backend" }
rv-mono = { path = "../../analysis/rv-mono" }
rv-syntax = { path = "../../foundation/rv-syntax" }
lang-raven = { path = "../../language-support/lang-raven" }
rv-hir = { version = "0.1.0", path = "../../analysis/rv-hir" }
