[package]
name = "rv-cranelift"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rv-mir = { path = "../../analysis/rv-mir" }
rv-hir = { path = "../../analysis/rv-hir" }
rv-span = { path = "../../foundation/rv-span" }
cranelift.workspace = true
cranelift-jit.workspace = true
cranelift-module.workspace = true
cranelift-codegen.workspace = true
anyhow.workspace = true
rustc-hash.workspace = true

[lints]
workspace = true
