[package]
name = "rv-interpreter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rv-hir = { path = "../../analysis/rv-hir" }
rv-hir-lower = { path = "../../analysis/rv-hir-lower" }
rv-mir = { path = "../../analysis/rv-mir" }
rv-ty = { path = "../../analysis/rv-ty" }
rv-intern = { path = "../../foundation/rv-intern" }
rv-span = { path = "../../foundation/rv-span" }
rustc-hash.workspace = true
thiserror.workspace = true
lasso.workspace = true

[lints]
workspace = true
