[package]
name = "rv-interpreter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rv-hir.workspace = true
rv-hir-lower.workspace = true
rv-mir.workspace = true
rv-mir-lower.workspace = true
rv-ty.workspace = true
rv-intern = { path = "../../foundation/rv-intern" }
rv-span = { path = "../../foundation/rv-span" }
rustc-hash.workspace = true
thiserror.workspace = true
lasso.workspace = true

[lints]
workspace = true
