[package]
name = "rv-llvm-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rv-hir = { workspace = true }
rv-mir = { workspace = true }
rv-intern = { workspace = true }
rv-span = { workspace = true }

# LLVM bindings - llvm-sys handles linking automatically once LLVM_SYS_180_PREFIX is set
inkwell = { version = "0.5", features = ["llvm18-0"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2.1"

[dev-dependencies]
