[package]
name = "rv-llvm-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rv-hir = { workspace = true }
rv-mir = { workspace = true }
rv-intern = { workspace = true }
rv-span = { workspace = true }

# LLVM bindings - llvm-sys handles linking automatically once LLVM_SYS_180_PREFIX is set
inkwell = { version = "0.5", features = ["llvm18-0"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
# LLVM download happens BEFORE any dependencies compile
rv-llvm-download = { path = "../rv-llvm-download" }

[dev-dependencies]
