[package]
name = "rv-llvm-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rv-hir = { workspace = true }
rv-lir = { workspace = true }
rv-intern = { workspace = true }
rv-span = { workspace = true }

# LLVM bindings - using no-llvm-linking so build.rs handles all linking
inkwell = { version = "0.5", features = ["llvm18-0-no-llvm-linking"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
# Dependencies for downloading LLVM and manual linking
anyhow = { workspace = true }
cc = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2.1"

[dev-dependencies]
