[package]
name = "rv-database"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
salsa.workspace = true
rv-span = { path = "../rv-span" }
rv-vfs = { path = "../rv-vfs" }
rv-intern = { path = "../rv-intern" }
rv-hir.workspace = true
rv-mir.workspace = true
rv-mir-lower.workspace = true
rv-ty.workspace = true
rv-parser.workspace = true
rv-hir-lower.workspace = true
rv-syntax = { path = "../rv-syntax" }
anyhow.workspace = true
la-arena.workspace = true
