[package]
name = "rv-hir"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rv-span = { path = "../../foundation/rv-span" }
rv-intern = { path = "../../foundation/rv-intern" }
la-arena.workspace = true
rv-ty-id = { path = "../../foundation/rv-ty-id" }
rv-derive.workspace = true
rustc-hash.workspace = true
serde.workspace = true
