[package]
name = "rv-lir"
version.workspace = true
edition.workspace = true

[dependencies]
rv-hir.workspace = true
rv-hir-lower.workspace = true
rv-mir.workspace = true
rv-mono.workspace = true
rv-ty.workspace = true
rv-intern.workspace = true
rv-span.workspace = true
indexmap.workspace = true
lasso.workspace = true
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
