[package]
name = "rv-mir"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rv-span = { path = "../../foundation/rv-span" }
rv-intern = { path = "../../foundation/rv-intern" }
la-arena.workspace = true
rv-hir = { path = "../rv-hir" }
rv-ty.workspace = true
serde.workspace = true
indexmap.workspace = true
rustc-hash.workspace = true
lasso.workspace = true
