[package]
name = "rv-hir-lower"
version = "0.1.0"
edition = "2021"

[dependencies]
la-arena.workspace = true
rv-hir.workspace = true
rv-resolve.workspace = true
rv-intern.workspace = true
rv-span.workspace = true
rv-syntax.workspace = true
rv-macro.workspace = true
lang-raven = { path = "../../language-support/lang-raven" }

[dev-dependencies]
rv-parser = { path = "../../parser/rv-parser" }

[lints]
workspace = true
