[package]
name = "rv-mir-lower"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rv-hir.workspace = true
rv-mir.workspace = true
rv-ty.workspace = true
rv-span.workspace = true
rv-intern.workspace = true
la-arena.workspace = true
rustc-hash.workspace = true
indexmap.workspace = true
lasso.workspace = true

[lints]
workspace = true
