[package]
name = "rv-const-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rv-hir.workspace = true
rv-intern.workspace = true
rv-span.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[lints]
workspace = true
